--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
+    "my-app": "file:",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
