--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "my-app": "file:",
