--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "type": "commonjs",
   "dependencies": {
     "@google/genai": "^1.0.1",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.9.0",
     "backend": "file:",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
@@ -28,9 +30,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "react-markdown": "^10.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
